--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,8 @@
 
 .noStyle {
 
-    all: unset;
+    background-color: transparent;
+    color: transparent;
+    border-color:  transparent;
 
 }
