--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,7 @@
     margin-top: 0vh;
     height: 100vh;
     width: 50vw;
+    position: absolute;
 
 }
 
@@ -13,6 +14,7 @@
     margin-top: 0vh;
     height: 100vh;
     width: 50vw;
+    position: absolute;
 
 }
 
