--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,7 @@
     height: 100vh;
     width: 50vw;
     position: absolute;
+    display: flex;
 
 }
 
@@ -15,6 +16,7 @@
     height: 100vh;
     width: 50vw;
     position: absolute;
+    display: flex;
 
 }
 
