--- a/styles.css
+++ b/styles.css
@@ -28,9 +28,9 @@
 
 }
 
-.slide {
+body, html {
 
-    position: absolute;
+    position:absolute;
     display: flex;
     height: 100vh;
     width: 100vw;
