--- a/styles.css
+++ b/styles.css
@@ -36,3 +36,14 @@ body, html {
     width: 100vw;
 
 }
+
+.slide {
+
+    position: absolute;
+    display: flex;
+    width: 100vw;
+    height: 100vh;
+    width: 100%;
+    height: 100%;
+
+}
